Enhance benchmark framework with GC tracing and realistic cache value generation; update documentation and scripts for improved clarity and functionality